# Boxing-for-robots

./: .gitignore  README.md
drone-game/: CMakeLists.txt  CMakeSettings.json  drone-game.cpp  drone-game.h
drone-game/enc_temp_folder/4dc1462debf3f56693ee4b817786158/: Enemy.h
drone-game/headers/: CharacterController.h  Damagable.h  Enemy.h  GameObject.h  Input.h  PhysicsManager.h  Player.h  RenderManager.h  SpriteSet.h  UIController.h  main.h
drone-game/resources/: enemy sprites.xcf  player punch sprites.xcf
drone-game/source/: CharacterController.cpp  Damagable.cpp  Enemy.cpp  GameObject.cpp  PhysicsManager.cpp  Player.cpp  RenderManager.cpp  UIController.cpp  main.cpp
