# CMakeList.txt : CMake project for drone-game, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("drone-game")

# Add source to this project's executable.
add_executable (drone-game "drone-game.cpp" "drone-game.h")

# TODO: Add tests and install targets if needed.
